package parser

import (
	"context"
	"testing"
	"time"

	"github.com/escalier-lang/escalier/internal/ast"
	"github.com/escalier-lang/escalier/internal/snapshot"
	"github.com/gkampitakis/go-snaps/snaps"
	"github.com/stretchr/testify/assert"
)

func TestParseExprNoErrors(t *testing.T) {
	tests := map[string]struct {
		input string
	}{
		"StringLiteral": {
			input: "\"hello\"",
		},
		"TemplateStringLiteralWithExprs": {
			input: "`hello ${name}`",
		},
		"TemplateStringMultipleLines": {
			input: "`hello\nworld`",
		},
		"TemplateStringLiteralWithMultipleExprs": {
			input: "`a${b}c${d}e`",
		},
		"NestedTemplateStringLiteral": {
			input: "`a${`b${c}d`}e`",
		},
		"TaggedTemplateStringLiteral": {
			input: "gql`query userId { user { id } }`",
		},
		"NumberLiteral": {
			input: "5",
		},
		"NumberLiteralDecimal": {
			input: "1.5",
		},
		"NumberLiteralTrailingDecimal": {
			input: "1.",
		},
		"NumberLiteralLeadingDecimal": {
			input: ".5",
		},
		"RegexLiteral": {
			input: "/hello/gi",
		},
		"Addition": {
			input: "a + b",
		},
		"Concatenation": {
			input: "a ++ b",
		},
		"AddSub": {
			input: "a - b + c",
		},
		"MulAdd": {
			input: "a * b + c * d",
		},
		"MulDiv": {
			input: "a / b * c",
		},
		"UnaryOps": {
			input: "+a - -b",
		},
		"SingleUnaryOp": {
			input: "-5",
		},
		"Parens": {
			input: "a * (b + c)",
		},
		"Call": {
			input: "foo(a, b, c)",
		},
		"CallPrecedence": {
			input: "a + foo(b)",
		},
		"CurriedCall": {
			input: "foo(a)(b)(c)",
		},
		"OptChainCall": {
			input: "foo?(bar)",
		},
		"ArrayLiteral": {
			input: "[1, 2, 3]",
		},
		"Member": {
			input: "a.b?.c",
		},
		"MemberPrecedence": {
			input: "a + b.c",
		},
		"Index": {
			input: "a[base + offset]",
		},
		"IndexPrecedence": {
			input: "a + b[c]",
		},
		"MultipleIndexes": {
			input: "a[i][j]",
		},
		"OptChainIndex": {
			input: "a?[base + offset]",
		},
		"FuncExpr": {
			input: "fn (a, b) { a + b }",
		},
		"FuncExprWithReturnType": {
			input: "fn (a, b) -> number { a + b }",
		},
		"FuncExprWithThrows": {
			input: "fn (a, b) -> number throws Error { a + b }",
		},
		"FuncExprReturnIfElse": {
			input: `fn (value: string) { return if value != "" { value } else { "value is empty" } }`,
		},
		"FuncExprWithTypeParams": {
			input: "fn <T>(value: T) -> T { value }",
		},
		"FuncExprWithMultipleTypeParams": {
			input: "fn <A, B>(a: A, b: B) -> [A, B] { [a, b] }",
		},
		"IfElse": {
			input: "if cond { a } else { b }",
		},
		"IfElseChaining": {
			input: "if cond1 { a } else if cond2 { b } else { c }",
		},
		"BasicObject": {
			input: "{ 0: \"hello\", foo: 5, \"bar\"?: true, baz, [qux]: false }",
		},
		"BasicObjectWithTypeAssertions": {
			input: "{ 0: \"hello\":string, foo: 5:number, \"bar\"?: true:boolean, baz, [qux]: false:boolean }",
		},
		"EmptyObject": {
			input: "{}",
		},
		"ObjectWithSpreads": {
			input: "{a, ...b, ...{c, d}}",
		},
		"TypeCast": {
			input: "value: string",
		},
		"TypeCastChain": {
			input: "value: string: unknown",
		},
		"TypeCastPrecedence": {
			input: "a + b: number",
		},
		"LessThan": {
			input: "a < b",
		},
		"GreaterThan": {
			input: "a > b",
		},
		"LessThanEqual": {
			input: "a <= b",
		},
		"GreaterThanEqual": {
			input: "a >= b",
		},
		"Equal": {
			input: "a == b",
		},
		"NotEqual": {
			input: "a != b",
		},
		"FuncCall": {
			input: "foo()",
		},
		"MethodCall": {
			input: "foo.bar()/baz",
		},
		"MatchBasic": {
			input: "match x { 1 => \"one\", 2 => \"two\" }",
		},
		"MatchWithGuard": {
			input: "match x { [a, b] if a > b => \"first is greater\" }",
		},
		"MatchWithBlock": {
			input: "match x { _ => {\n  console.log(x)\n  \"unknown\"\n} }",
		},
		"MatchWithPatterns": {
			input: "match value { {name} => name, [first, ...rest] => first, _ => null }",
		},
		"MatchComplex": {
			input: "match result { Some(value) if value > 0 => value, Some(_) => 0, None => -1 }",
		},
		"MatchClassInstance": {
			input: `
				match shape {
					Point {x, y} => x + y,
					Circle {radius} => radius * 2,
				}
			`,
		},
		"TryBasic": {
			input: "try { riskyOperation() }",
		},
		"TryCatch": {
			input: "try { riskyOperation() } catch { error => { console.log(error) } }",
		},
		"TryCatchMultipleCases": {
			input: "try { operation() } catch { NetworkError(msg) => \"Network: \" ++ msg, TimeoutError => \"Timeout\", _ => \"Unknown error\" }",
		},
		"TryCatchWithGuard": {
			input: "try { getValue() } catch { error if error.code == 404 => \"Not found\", error => error.message }",
		},
		"TryCatchWithBlockBody": {
			input: "try { complexOperation() } catch { error => {\n  logError(error)\n  \"Failed\"\n} }",
		},
		"NestedTry": {
			input: "try { try { innerOperation() } catch { _ => null } } catch { outer => outer }",
		},
		"ThrowVariable": {
			input: "throw error",
		},
		"ThrowExpression": {
			input: "throw computeError()",
		},
		"ThrowStringLiteral": {
			input: "throw \"divide by zero\"",
		},
		"YieldWithValue": {
			input: "yield 1",
		},
		"YieldFrom": {
			input: "yield from items",
		},
		"BareYield": {
			input: "yield",
		},
		"YieldInBinaryExpr": {
			input: "x + yield 1",
		},
		"YieldFromInBinaryExpr": {
			input: "x + yield from items",
		},
		"BorrowImmutable": {
			input: "&p",
		},
		"BorrowMutable": {
			input: "&mut p",
		},
		"BorrowOfMember": {
			// Prefix `&` binds looser than the postfix `.`, so `&obj.f` parses
			// as `&(obj.f)`, a borrow of the whole place path.
			input: "&obj.f",
		},
		"BorrowMutableOfMember": {
			input: "&mut obj.f",
		},
		"BorrowOfCallResult": {
			input: "&getValue()",
		},
		"UnaryMinusOfBorrow": {
			// A unary prefix wraps the borrow rather than colliding with it:
			// `-&p` parses as `UnaryMinus(BorrowExpr(p))`.
			input: "-&p",
		},
		"LogicalNotOfBorrowMutable": {
			input: "!&mut p",
		},
	}

	for name, test := range tests {
		t.Run(name, func(t *testing.T) {
			t.Parallel()
			source := &ast.Source{
				ID:       0,
				Path:     "input.esc",
				Contents: test.input,
			}

			ctx, cancel := context.WithTimeout(context.Background(), 1*time.Second)
			defer cancel()
			parser := NewParser(ctx, source)
			expr := parser.expr()

			if len(parser.errors) > 0 {
				t.Logf("Unexpected errors:")
				for _, err := range parser.errors {
					t.Logf("  %s", err.String())
				}
			}
			assert.Equal(t, []*Error{}, parser.errors)
			snaps.MatchSnapshot(t, snapshot.String(expr))
		})
	}
}

func TestParseExprErrorHandling(t *testing.T) {
	tests := map[string]struct {
		input string
	}{
		"IncompleteBinaryExpr": {
			input: "a - b +",
		},
		"ExtraOperatorsInBinaryExpr": {
			input: "a + * b",
		},
		"IncompleteCall": {
			input: "foo(a,",
		},
		"IncompleteMember": {
			input: "a + b.",
		},
		"IncompleteMemberOptChain": {
			input: "a + b?.",
		},
		"MismatchedParens": {
			input: "a * (b + c]",
		},
		"MismatchedBracketsArrayLiteral": {
			input: "[1, 2, 3)",
		},
		"MismatchedBracketsIndex": {
			input: "foo[bar)",
		},
		"IncompleteIndex": {
			input: "arr[",
		},
		"IncompleteCallMissingCloseParen": {
			input: "foo(a, b",
		},
		"IncompleteTemplateLiteral": {
			input: "`foo",
		},
		"IncompleteTaggedTemplateLiteral": {
			input: "foo`bar",
		},
		"ParamsMissingOpeningParen": {
			input: "fn a, b) { a + b }",
		},
		"ParamsMissingClosingParen": {
			input: "fn (a, b { a + b }",
		},
		"IfElseMissingOpeningBraces": {
			input: "if cond a } else b }",
		},
		"IfElseMissingCondition": {
			input: "if { a } else { b }",
		},
		"IncompleteElse": {
			input: "if { a } else",
		},
		"ObjectMissingColon": {
			input: "{ foo 5, bar: 10 }",
		},
		"ObjectMissingComma": {
			input: "{ foo: 5 bar: 10 }",
		},
		"MatchMissingTarget": {
			input: "match { 1 => \"one\" }",
		},
		"MatchMissingOpeningBrace": {
			input: "match x 1 => \"one\" }",
		},
		"MatchMissingArrow": {
			input: "match x { 1 \"one\" }",
		},
		"MatchMissingPattern": {
			input: "match x { => \"one\" }",
		},
		"MatchIncompleteGuard": {
			input: "match x { 1 if => \"one\" }",
		},
		"MatchMissingBody": {
			input: "match x { 1 => }",
		},
		"MatchMissingClosingBrace": {
			input: "match x { 1 => \"one\"",
		},
		"TryMissingBlock": {
			input: "try",
		},
		"TryMissingOpeningBrace": {
			input: "try console.log(\"test\")",
		},
		"TryCatchMissingOpeningBrace": {
			input: "try { operation() } catch error => error }",
		},
		"TryCatchMissingClosingBrace": {
			input: "try { operation() } catch { error => error",
		},
		"TryCatchMissingPattern": {
			input: "try { operation() } catch { => \"error\" }",
		},
		"TryCatchMissingArrow": {
			input: "try { operation() } catch { error \"failed\" }",
		},
		"TryCatchMissingBody": {
			input: "try { operation() } catch { error => }",
		},
		"TryCatchIncompleteGuard": {
			input: "try { operation() } catch { error if => \"failed\" }",
		},
		"ThrowMissingExpression": {
			input: "throw",
		},
		"ArraySpreadMissingOperand": {
			input: "[...]",
		},
		"ObjectSpreadMissingOperand": {
			input: "{...}",
		},
		"ArraySpreadMissingOperandBeforeComma": {
			input: "[..., x]",
		},
		"ObjectSpreadMissingOperandBeforeComma": {
			input: "{..., a: 1}",
		},
		"ObjectMethodShorthand": {
			input: "{ foo() { return 5 } }",
		},
		"ObjectGetterShorthand": {
			input: "{ get foo() { return 5 } }",
		},
		"ObjectSetterShorthand": {
			input: "{ set foo(v) { } }",
		},
	}

	for name, test := range tests {
		t.Run(name, func(t *testing.T) {
			t.Parallel()
			source := &ast.Source{
				ID:       0,
				Path:     "input.esc",
				Contents: test.input,
			}

			ctx, cancel := context.WithTimeout(context.Background(), 1*time.Second)
			defer cancel()
			parser := NewParser(ctx, source)
			expr := parser.expr()

			snaps.MatchSnapshot(t, snapshot.String(expr))
			assert.Greater(t, len(parser.errors), 0)
			snaps.MatchSnapshot(t, snapshot.String(parser.errors))
		})
	}
}
