
[TestParseExprErrorHandling/IfElseMissingCondition - 1]
&ast.IfElseExpr{
    Cons: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.IdentExpr{
                    Name: "a",
                    span: 1:6-1:7,
                },
                span: 1:6-1:7,
            },
        },
        Span: 1:4-1:9,
    },
    Alt: &ast.BlockOrExpr{
        Block: &ast.Block{
            Stmts: []ast.Stmt{
                &ast.ExprStmt{
                    Expr: &ast.IdentExpr{
                        Name: "b",
                        span: 1:17-1:18,
                    },
                    span: 1:17-1:18,
                },
            },
            Span: 1:15-1:20,
        },
    },
    span: 1:1-1:20,
}
---

[TestParseExprErrorHandling/IfElseMissingCondition - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:4-1:5,
        Message: "Expected a condition",
    },
}
---

[TestParseExprErrorHandling/IfElseMissingOpeningBraces - 1]
&ast.IfElseExpr{
    Cond: &ast.IdentExpr{
        Name: "cond",
        span: 1:4-1:8,
    },
    Cons: ast.Block{
        Span: 1:9-1:10,
    },
    span: 1:1-1:11,
}
---

[TestParseExprErrorHandling/IncompleteCall - 1]
&ast.CallExpr{
    Callee: &ast.IdentExpr{
        Name: "foo",
        span: 1:1-1:4,
    },
    Args: []ast.Expr{
        &ast.IdentExpr{
            Name: "a",
            span: 1:5-1:6,
        },
        &ast.ErrorExpr{
            span: 1:7-1:7,
        },
    },
    span: 1:1-1:7,
}
---

[TestParseExprErrorHandling/IncompleteTaggedTemplateLiteral - 1]
&ast.TaggedTemplateLitExpr{
    Tag: &ast.IdentExpr{
        Name: "foo",
        span: 1:1-1:4,
    },
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Value: "bar",
            Span: 1:5-1:8,
        },
    },
    span: 1:1-1:8,
}
---

[TestParseExprErrorHandling/MismatchedBracketsArrayLiteral - 1]
&ast.TupleExpr{
    Elems: []ast.Expr{
        &ast.LiteralExpr{
            Lit: &ast.NumLit{
                Value: 1,
                span: 1:2-1:3,
            },
            span: 1:2-1:3,
        },
        &ast.LiteralExpr{
            Lit: &ast.NumLit{
                Value: 2,
                span: 1:5-1:6,
            },
            span: 1:5-1:6,
        },
        &ast.LiteralExpr{
            Lit: &ast.NumLit{
                Value: 3,
                span: 1:8-1:9,
            },
            span: 1:8-1:9,
        },
    },
    span: 1:1-1:10,
}
---

[TestParseExprErrorHandling/IncompleteCall - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:7-1:7,
        Message: "Expected an expression",
    },
    &parser.Error{
        Span: 1:4-1:5,
        Message: "Expected a closing paren",
    },
}
---

[TestParseExprErrorHandling/MismatchedBracketsArrayLiteral - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:9-1:10,
        Message: "Expected ] but got )",
    },
}
---

[TestParseExprErrorHandling/MismatchedParens - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 1:1-1:2,
    },
    Op: "*",
    Right: &ast.BinaryExpr{
        Left: &ast.IdentExpr{
            Name: "b",
            span: 1:6-1:7,
        },
        Op: "+",
        Right: &ast.IdentExpr{
            Name: "c",
            span: 1:10-1:11,
        },
        span: 1:6-1:11,
    },
    span: 1:1-1:11,
}
---

[TestParseExprErrorHandling/IfElseMissingOpeningBraces - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:9-1:10,
        Message: "Expected an opening brace",
    },
}
---

[TestParseExprErrorHandling/ExtraOperatorsInBinaryExpr - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 1:1-1:2,
    },
    Op: "+",
    Right: &ast.IdentExpr{
        Name: "b",
        span: 1:7-1:8,
    },
    span: 1:1-1:8,
}
---

[TestParseExprErrorHandling/MismatchedParens - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:11-1:12,
        Message: "Expected ) but got ]",
    },
}
---

[TestParseExprErrorHandling/IncompleteBinaryExpr - 1]
&ast.BinaryExpr{
    Left: &ast.BinaryExpr{
        Left: &ast.IdentExpr{
            Name: "a",
            span: 1:1-1:2,
        },
        Op: "-",
        Right: &ast.IdentExpr{
            Name: "b",
            span: 1:5-1:6,
        },
        span: 1:1-1:6,
    },
    Op: "+",
    Right: &ast.ErrorExpr{
        span: 1:8-1:8,
    },
    span: 1:1-1:8,
}
---

[TestParseExprErrorHandling/IncompleteTemplateLiteral - 1]
&ast.TemplateLitExpr{
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Value: "foo",
            Span: 1:2-1:5,
        },
    },
    span: 1:1-1:5,
}
---

[TestParseExprErrorHandling/IncompleteTaggedTemplateLiteral - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:4-1:8,
        Message: "Expected a closing backtick",
    },
}
---

[TestParseExprErrorHandling/ParamsMissingClosingParen - 1]
&ast.FuncExpr{
    FuncSig: ast.FuncSig{
        Params: []*ast.Param{
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "a",
                    span: 1:5-1:6,
                },
            },
            &ast.Param{
                Pattern: &ast.InstancePat{
                    ClassName: &ast.Ident{
                        Name: "b",
                        span: 1:8-1:9,
                    },
                    Object: &ast.ObjectPat{
                        Elems: []ast.ObjPatElem{
                            &ast.ObjShorthandPat{
                                Key: &ast.Ident{
                                    Name: "a",
                                    span: 1:12-1:13,
                                },
                                span: 1:12-1:13,
                            },
                        },
                        span: 1:8-1:15,
                    },
                    span: 1:8-1:15,
                },
            },
        },
    },
    Body: &ast.Block{
        Span: 1:16-1:17,
    },
    span: 1:1-1:17,
}
---

[TestParseExprErrorHandling/MismatchedBracketsIndex - 1]
&ast.IndexExpr{
    Object: &ast.IdentExpr{
        Name: "foo",
        span: 1:1-1:4,
    },
    Index: &ast.IdentExpr{
        Name: "bar",
        span: 1:5-1:8,
    },
    span: 1:1-1:9,
}
---

[TestParseExprErrorHandling/IncompleteMember - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 1:1-1:2,
    },
    Op: "+",
    Right: &ast.MemberExpr{
        Object: &ast.IdentExpr{
            Name: "b",
            span: 1:5-1:6,
        },
        Prop: &ast.Ident{
            span: 1:7-1:7,
        },
        span: 1:5-1:7,
    },
    span: 1:1-1:7,
}
---

[TestParseExprErrorHandling/IncompleteBinaryExpr - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:8-1:8,
        Message: "Expected an expression",
    },
}
---

[TestParseExprErrorHandling/ExtraOperatorsInBinaryExpr - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:5-1:6,
        Message: "Unexpected token, '*'",
    },
}
---

[TestParseExprErrorHandling/MismatchedBracketsIndex - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:4-1:5,
        Message: "Expected a closing bracket",
    },
}
---

[TestParseExprErrorHandling/IncompleteMember - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:6-1:7,
        Message: "expected an identifier after .",
    },
}
---

[TestParseExprErrorHandling/IncompleteTemplateLiteral - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:1-1:5,
        Message: "Expected a closing backtick",
    },
}
---

[TestParseExprErrorHandling/ParamsMissingClosingParen - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:14-1:15,
        Message: "Expected } but got +",
    },
    &parser.Error{
        Span: 1:16-1:17,
        Message: "Expected ) but got identifier",
    },
    &parser.Error{
        Span: 1:16-1:17,
        Message: "Expected an opening brace",
    },
}
---

[TestParseExprErrorHandling/ParamsMissingOpeningParen - 1]
&ast.FuncExpr{
    FuncSig: ast.FuncSig{
        Params: []*ast.Param{
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "a",
                    span: 1:4-1:5,
                },
            },
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "b",
                    span: 1:7-1:8,
                },
            },
        },
    },
    Body: &ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.BinaryExpr{
                    Left: &ast.IdentExpr{
                        Name: "a",
                        span: 1:12-1:13,
                    },
                    Op: "+",
                    Right: &ast.IdentExpr{
                        Name: "b",
                        span: 1:16-1:17,
                    },
                    span: 1:12-1:17,
                },
                span: 1:12-1:17,
            },
        },
        Span: 1:10-1:19,
    },
    span: 1:1-1:19,
}
---

[TestParseExprErrorHandling/IncompleteMemberOptChain - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 1:1-1:2,
    },
    Op: "+",
    Right: &ast.MemberExpr{
        Object: &ast.IdentExpr{
            Name: "b",
            span: 1:5-1:6,
        },
        Prop: &ast.Ident{
            span: 1:8-1:8,
        },
        OptChain: true,
        span: 1:5-1:8,
    },
    span: 1:1-1:8,
}
---

[TestParseExprErrorHandling/ParamsMissingOpeningParen - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:4-1:5,
        Message: "Expected ( but got identifier",
    },
}
---

[TestParseExprErrorHandling/IncompleteMemberOptChain - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:6-1:8,
        Message: "expected an identifier after ?.",
    },
}
---

[TestParseExprErrorHandling/IncompleteElse - 1]
&ast.IfElseExpr{
    Cons: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.IdentExpr{
                    Name: "a",
                    span: 1:6-1:7,
                },
                span: 1:6-1:7,
            },
        },
        Span: 1:4-1:9,
    },
    span: 1:1-1:14,
}
---

[TestParseExprErrorHandling/IncompleteElse - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:4-1:5,
        Message: "Expected a condition",
    },
    &parser.Error{
        Span: 1:14-1:14,
        Message: "Expected an if or an opening brace",
    },
}
---

[TestParseExprNoErrors/Call - 1]
&ast.CallExpr{
    Callee: &ast.IdentExpr{
        Name: "foo",
        span: 1:1-1:4,
    },
    Args: []ast.Expr{
        &ast.IdentExpr{
            Name: "a",
            span: 1:5-1:6,
        },
        &ast.IdentExpr{
            Name: "b",
            span: 1:8-1:9,
        },
        &ast.IdentExpr{
            Name: "c",
            span: 1:11-1:12,
        },
    },
    span: 1:1-1:13,
}
---

[TestParseExprNoErrors/NumberLiteralTrailingDecimal - 1]
&ast.LiteralExpr{
    Lit: &ast.NumLit{
        Value: 1,
        span: 1:1-1:3,
    },
    span: 1:1-1:3,
}
---

[TestParseExprNoErrors/Index - 1]
&ast.IndexExpr{
    Object: &ast.IdentExpr{
        Name: "a",
        span: 1:1-1:2,
    },
    Index: &ast.BinaryExpr{
        Left: &ast.IdentExpr{
            Name: "base",
            span: 1:3-1:7,
        },
        Op: "+",
        Right: &ast.IdentExpr{
            Name: "offset",
            span: 1:10-1:16,
        },
        span: 1:3-1:16,
    },
    span: 1:1-1:17,
}
---

[TestParseExprNoErrors/UnaryOps - 1]
&ast.BinaryExpr{
    Left: &ast.UnaryExpr{
        Arg: &ast.IdentExpr{
            Name: "a",
            span: 1:2-1:3,
        },
        span: 1:1-1:3,
    },
    Op: "-",
    Right: &ast.UnaryExpr{
        Op: 1,
        Arg: &ast.IdentExpr{
            Name: "b",
            span: 1:7-1:8,
        },
        span: 1:6-1:8,
    },
    span: 1:1-1:8,
}
---

[TestParseExprNoErrors/TemplateStringMultipleLines - 1]
&ast.TemplateLitExpr{
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Value: "hello\nworld",
            Span: 1:2-2:7,
        },
    },
    span: 1:1-2:7,
}
---

[TestParseExprNoErrors/TaggedTemplateStringLiteral - 1]
&ast.TaggedTemplateLitExpr{
    Tag: &ast.IdentExpr{
        Name: "gql",
        span: 1:1-1:4,
    },
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Value: "query userId { user { id } }",
            Span: 1:5-1:34,
        },
    },
    span: 1:1-1:34,
}
---

[TestParseExprNoErrors/ArrayLiteral - 1]
&ast.TupleExpr{
    Elems: []ast.Expr{
        &ast.LiteralExpr{
            Lit: &ast.NumLit{
                Value: 1,
                span: 1:2-1:3,
            },
            span: 1:2-1:3,
        },
        &ast.LiteralExpr{
            Lit: &ast.NumLit{
                Value: 2,
                span: 1:5-1:6,
            },
            span: 1:5-1:6,
        },
        &ast.LiteralExpr{
            Lit: &ast.NumLit{
                Value: 3,
                span: 1:8-1:9,
            },
            span: 1:8-1:9,
        },
    },
    span: 1:1-1:10,
}
---

[TestParseExprNoErrors/EmptyObject - 1]
&ast.ObjectExpr{
    span: 1:1-1:3,
}
---

[TestParseExprNoErrors/Member - 1]
&ast.MemberExpr{
    Object: &ast.MemberExpr{
        Object: &ast.IdentExpr{
            Name: "a",
            span: 1:1-1:2,
        },
        Prop: &ast.Ident{
            Name: "b",
            span: 1:3-1:4,
        },
        span: 1:1-1:4,
    },
    Prop: &ast.Ident{
        Name: "c",
        span: 1:6-1:7,
    },
    OptChain: true,
    span: 1:1-1:7,
}
---

[TestParseExprNoErrors/Parens - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 1:1-1:2,
    },
    Op: "*",
    Right: &ast.BinaryExpr{
        Left: &ast.IdentExpr{
            Name: "b",
            span: 1:6-1:7,
        },
        Op: "+",
        Right: &ast.IdentExpr{
            Name: "c",
            span: 1:10-1:11,
        },
        span: 1:6-1:11,
    },
    span: 1:1-1:11,
}
---

[TestParseExprNoErrors/StringLiteral - 1]
&ast.LiteralExpr{
    Lit: &ast.StrLit{
        Value: "hello",
        span: 1:1-1:8,
    },
    span: 1:1-1:8,
}
---

[TestParseExprNoErrors/IndexPrecedence - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 1:1-1:2,
    },
    Op: "+",
    Right: &ast.IndexExpr{
        Object: &ast.IdentExpr{
            Name: "b",
            span: 1:5-1:6,
        },
        Index: &ast.IdentExpr{
            Name: "c",
            span: 1:7-1:8,
        },
        span: 1:5-1:9,
    },
    span: 1:1-1:9,
}
---

[TestParseExprNoErrors/IfElse - 1]
&ast.IfElseExpr{
    Cond: &ast.IdentExpr{
        Name: "cond",
        span: 1:4-1:8,
    },
    Cons: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.IdentExpr{
                    Name: "a",
                    span: 1:11-1:12,
                },
                span: 1:11-1:12,
            },
        },
        Span: 1:9-1:14,
    },
    Alt: &ast.BlockOrExpr{
        Block: &ast.Block{
            Stmts: []ast.Stmt{
                &ast.ExprStmt{
                    Expr: &ast.IdentExpr{
                        Name: "b",
                        span: 1:22-1:23,
                    },
                    span: 1:22-1:23,
                },
            },
            Span: 1:20-1:25,
        },
    },
    span: 1:1-1:25,
}
---

[TestParseExprNoErrors/SingleUnaryOp - 1]
&ast.UnaryExpr{
    Op: 1,
    Arg: &ast.LiteralExpr{
        Lit: &ast.NumLit{
            Value: 5,
            span: 1:2-1:3,
        },
        span: 1:2-1:3,
    },
    span: 1:1-1:3,
}
---

[TestParseExprNoErrors/NestedTemplateStringLiteral - 1]
&ast.TemplateLitExpr{
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Value: "a",
            Span: 1:2-1:5,
        },
        &ast.Quasi{
            Value: "e",
            Span: 1:14-1:16,
        },
    },
    Exprs: []ast.Expr{
        &ast.TemplateLitExpr{
            Quasis: []*ast.Quasi{
                &ast.Quasi{
                    Value: "b",
                    Span: 1:6-1:9,
                },
                &ast.Quasi{
                    Value: "d",
                    Span: 1:11-1:13,
                },
            },
            Exprs: []ast.Expr{
                &ast.IdentExpr{
                    Name: "c",
                    span: 1:9-1:10,
                },
            },
            span: 1:5-1:13,
        },
    },
    span: 1:1-1:16,
}
---

[TestParseExprNoErrors/IfElseChaining - 1]
&ast.IfElseExpr{
    Cond: &ast.IdentExpr{
        Name: "cond1",
        span: 1:4-1:9,
    },
    Cons: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.IdentExpr{
                    Name: "a",
                    span: 1:12-1:13,
                },
                span: 1:12-1:13,
            },
        },
        Span: 1:10-1:15,
    },
    Alt: &ast.BlockOrExpr{
        Expr: &ast.IfElseExpr{
            Cond: &ast.IdentExpr{
                Name: "cond2",
                span: 1:24-1:29,
            },
            Cons: ast.Block{
                Stmts: []ast.Stmt{
                    &ast.ExprStmt{
                        Expr: &ast.IdentExpr{
                            Name: "b",
                            span: 1:32-1:33,
                        },
                        span: 1:32-1:33,
                    },
                },
                Span: 1:30-1:35,
            },
            Alt: &ast.BlockOrExpr{
                Block: &ast.Block{
                    Stmts: []ast.Stmt{
                        &ast.ExprStmt{
                            Expr: &ast.IdentExpr{
                                Name: "c",
                                span: 1:43-1:44,
                            },
                            span: 1:43-1:44,
                        },
                    },
                    Span: 1:41-1:46,
                },
            },
            span: 1:20-1:46,
        },
    },
    span: 1:1-1:46,
}
---

[TestParseExprNoErrors/NumberLiteral - 1]
&ast.LiteralExpr{
    Lit: &ast.NumLit{
        Value: 5,
        span: 1:1-1:2,
    },
    span: 1:1-1:2,
}
---

[TestParseExprNoErrors/AddSub - 1]
&ast.BinaryExpr{
    Left: &ast.BinaryExpr{
        Left: &ast.IdentExpr{
            Name: "a",
            span: 1:1-1:2,
        },
        Op: "-",
        Right: &ast.IdentExpr{
            Name: "b",
            span: 1:5-1:6,
        },
        span: 1:1-1:6,
    },
    Op: "+",
    Right: &ast.IdentExpr{
        Name: "c",
        span: 1:9-1:10,
    },
    span: 1:1-1:10,
}
---

[TestParseExprNoErrors/NumberLiteralDecimal - 1]
&ast.LiteralExpr{
    Lit: &ast.NumLit{
        Value: 1.5,
        span: 1:1-1:4,
    },
    span: 1:1-1:4,
}
---

[TestParseExprNoErrors/CurriedCall - 1]
&ast.CallExpr{
    Callee: &ast.CallExpr{
        Callee: &ast.CallExpr{
            Callee: &ast.IdentExpr{
                Name: "foo",
                span: 1:1-1:4,
            },
            Args: []ast.Expr{
                &ast.IdentExpr{
                    Name: "a",
                    span: 1:5-1:6,
                },
            },
            span: 1:1-1:7,
        },
        Args: []ast.Expr{
            &ast.IdentExpr{
                Name: "b",
                span: 1:8-1:9,
            },
        },
        span: 1:1-1:10,
    },
    Args: []ast.Expr{
        &ast.IdentExpr{
            Name: "c",
            span: 1:11-1:12,
        },
    },
    span: 1:1-1:13,
}
---

[TestParseExprNoErrors/OptChainIndex - 1]
&ast.IndexExpr{
    Object: &ast.IdentExpr{
        Name: "a",
        span: 1:1-1:2,
    },
    Index: &ast.BinaryExpr{
        Left: &ast.IdentExpr{
            Name: "base",
            span: 1:4-1:8,
        },
        Op: "+",
        Right: &ast.IdentExpr{
            Name: "offset",
            span: 1:11-1:17,
        },
        span: 1:4-1:17,
    },
    OptChain: true,
    span: 1:1-1:18,
}
---

[TestParseExprNoErrors/MulDiv - 1]
&ast.BinaryExpr{
    Left: &ast.BinaryExpr{
        Left: &ast.IdentExpr{
            Name: "a",
            span: 1:1-1:2,
        },
        Op: "/",
        Right: &ast.IdentExpr{
            Name: "b",
            span: 1:5-1:6,
        },
        span: 1:1-1:6,
    },
    Op: "*",
    Right: &ast.IdentExpr{
        Name: "c",
        span: 1:9-1:10,
    },
    span: 1:1-1:10,
}
---

[TestParseExprNoErrors/MulAdd - 1]
&ast.BinaryExpr{
    Left: &ast.BinaryExpr{
        Left: &ast.IdentExpr{
            Name: "a",
            span: 1:1-1:2,
        },
        Op: "*",
        Right: &ast.IdentExpr{
            Name: "b",
            span: 1:5-1:6,
        },
        span: 1:1-1:6,
    },
    Op: "+",
    Right: &ast.BinaryExpr{
        Left: &ast.IdentExpr{
            Name: "c",
            span: 1:9-1:10,
        },
        Op: "*",
        Right: &ast.IdentExpr{
            Name: "d",
            span: 1:13-1:14,
        },
        span: 1:9-1:14,
    },
    span: 1:1-1:14,
}
---

[TestParseExprNoErrors/TemplateStringLiteralWithExprs - 1]
&ast.TemplateLitExpr{
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Value: "hello ",
            Span: 1:2-1:10,
        },
        &ast.Quasi{
            Span: 1:15-1:16,
        },
    },
    Exprs: []ast.Expr{
        &ast.IdentExpr{
            Name: "name",
            span: 1:10-1:14,
        },
    },
    span: 1:1-1:16,
}
---

[TestParseExprNoErrors/MemberPrecedence - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 1:1-1:2,
    },
    Op: "+",
    Right: &ast.MemberExpr{
        Object: &ast.IdentExpr{
            Name: "b",
            span: 1:5-1:6,
        },
        Prop: &ast.Ident{
            Name: "c",
            span: 1:7-1:8,
        },
        span: 1:5-1:8,
    },
    span: 1:1-1:8,
}
---

[TestParseExprNoErrors/CallPrecedence - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 1:1-1:2,
    },
    Op: "+",
    Right: &ast.CallExpr{
        Callee: &ast.IdentExpr{
            Name: "foo",
            span: 1:5-1:8,
        },
        Args: []ast.Expr{
            &ast.IdentExpr{
                Name: "b",
                span: 1:9-1:10,
            },
        },
        span: 1:5-1:11,
    },
    span: 1:1-1:11,
}
---

[TestParseExprNoErrors/TemplateStringLiteralWithMultipleExprs - 1]
&ast.TemplateLitExpr{
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Value: "a",
            Span: 1:2-1:5,
        },
        &ast.Quasi{
            Value: "c",
            Span: 1:7-1:10,
        },
        &ast.Quasi{
            Value: "e",
            Span: 1:12-1:14,
        },
    },
    Exprs: []ast.Expr{
        &ast.IdentExpr{
            Name: "b",
            span: 1:5-1:6,
        },
        &ast.IdentExpr{
            Name: "d",
            span: 1:10-1:11,
        },
    },
    span: 1:1-1:14,
}
---

[TestParseExprNoErrors/Addition - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 1:1-1:2,
    },
    Op: "+",
    Right: &ast.IdentExpr{
        Name: "b",
        span: 1:5-1:6,
    },
    span: 1:1-1:6,
}
---

[TestParseExprNoErrors/OptChainCall - 1]
&ast.CallExpr{
    Callee: &ast.IdentExpr{
        Name: "foo",
        span: 1:1-1:4,
    },
    Args: []ast.Expr{
        &ast.IdentExpr{
            Name: "bar",
            span: 1:6-1:9,
        },
    },
    OptChain: true,
    span: 1:1-1:10,
}
---

[TestParseExprNoErrors/NumberLiteralLeadingDecimal - 1]
&ast.LiteralExpr{
    Lit: &ast.NumLit{
        Value: 0.5,
        span: 1:1-1:3,
    },
    span: 1:1-1:3,
}
---

[TestParseExprNoErrors/MultipleIndexes - 1]
&ast.IndexExpr{
    Object: &ast.IndexExpr{
        Object: &ast.IdentExpr{
            Name: "a",
            span: 1:1-1:2,
        },
        Index: &ast.IdentExpr{
            Name: "i",
            span: 1:3-1:4,
        },
        span: 1:1-1:5,
    },
    Index: &ast.IdentExpr{
        Name: "j",
        span: 1:6-1:7,
    },
    span: 1:1-1:8,
}
---

[TestParseExprNoErrors/FuncExpr - 1]
&ast.FuncExpr{
    FuncSig: ast.FuncSig{
        Params: []*ast.Param{
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "a",
                    span: 1:5-1:6,
                },
            },
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "b",
                    span: 1:8-1:9,
                },
            },
        },
    },
    Body: &ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.BinaryExpr{
                    Left: &ast.IdentExpr{
                        Name: "a",
                        span: 1:13-1:14,
                    },
                    Op: "+",
                    Right: &ast.IdentExpr{
                        Name: "b",
                        span: 1:17-1:18,
                    },
                    span: 1:13-1:18,
                },
                span: 1:13-1:18,
            },
        },
        Span: 1:11-1:20,
    },
    span: 1:1-1:20,
}
---

[TestParseExprNoErrors/BasicObject - 1]
&ast.ObjectExpr{
    Elems: []ast.ObjExprElem{
        &ast.PropertyExpr{
            Name: &ast.NumLit{
                span: 1:3-1:4,
            },
            Value: &ast.LiteralExpr{
                Lit: &ast.StrLit{
                    Value: "hello",
                    span: 1:6-1:13,
                },
                span: 1:6-1:13,
            },
            span: 1:3-1:13,
        },
        &ast.PropertyExpr{
            Name: &ast.IdentExpr{
                Name: "foo",
                span: 1:15-1:18,
            },
            Value: &ast.LiteralExpr{
                Lit: &ast.NumLit{
                    Value: 5,
                    span: 1:20-1:21,
                },
                span: 1:20-1:21,
            },
            span: 1:15-1:21,
        },
        &ast.PropertyExpr{
            Name: &ast.StrLit{
                Value: "bar",
                span: 1:23-1:28,
            },
            Optional: true,
            Value: &ast.LiteralExpr{
                Lit: &ast.BoolLit{
                    Value: true,
                    span: 1:31-1:35,
                },
                span: 1:31-1:35,
            },
            span: 1:23-1:35,
        },
        &ast.PropertyExpr{
            Name: &ast.IdentExpr{
                Name: "baz",
                span: 1:37-1:40,
            },
            span: 1:37-1:40,
        },
        &ast.PropertyExpr{
            Name: &ast.ComputedKey{
                Expr: &ast.IdentExpr{
                    Name: "qux",
                    span: 1:43-1:46,
                },
            },
            Value: &ast.LiteralExpr{
                Lit: &ast.BoolLit{
                    span: 1:49-1:54,
                },
                span: 1:49-1:54,
            },
            span: 1:43-1:54,
        },
    },
    span: 1:1-1:56,
}
---

[TestParseExprErrorHandling/ObjectMissingComma - 1]
&ast.TypeCastExpr{
    Expr: &ast.ObjectExpr{
        Elems: []ast.ObjExprElem{
            &ast.PropertyExpr{
                Name: &ast.IdentExpr{
                    Name: "foo",
                    span: 1:3-1:6,
                },
                Value: &ast.LiteralExpr{
                    Lit: &ast.NumLit{
                        Value: 5,
                        span: 1:8-1:9,
                    },
                    span: 1:8-1:9,
                },
                span: 1:3-1:9,
            },
        },
        span: 1:1-1:13,
    },
    TypeAnn: &ast.LitTypeAnn{
        Lit: &ast.NumLit{
            Value: 10,
            span: 1:15-1:17,
        },
        span: 1:15-1:17,
    },
    span: 1:1-1:17,
}
---

[TestParseExprErrorHandling/ObjectMissingComma - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:10-1:13,
        Message: "Expected } but got identifier",
    },
}
---

[TestParseExprErrorHandling/ObjectMissingColon - 1]
&ast.ObjectExpr{
    Elems: []ast.ObjExprElem{
        &ast.PropertyExpr{
            Name: &ast.IdentExpr{
                Name: "foo",
                span: 1:3-1:6,
            },
            Value: &ast.LiteralExpr{
                Lit: &ast.NumLit{
                    Value: 5,
                    span: 1:7-1:8,
                },
                span: 1:7-1:8,
            },
            span: 1:3-1:6,
        },
        &ast.PropertyExpr{
            Name: &ast.IdentExpr{
                Name: "bar",
                span: 1:10-1:13,
            },
            Value: &ast.LiteralExpr{
                Lit: &ast.NumLit{
                    Value: 10,
                    span: 1:15-1:17,
                },
                span: 1:15-1:17,
            },
            span: 1:10-1:17,
        },
    },
    span: 1:1-1:19,
}
---

[TestParseExprErrorHandling/ObjectMissingColon - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:7-1:8,
        Message: "Expected a comma or closing brace",
    },
}
---

[TestParseExprNoErrors/LessThanEqual - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 1:1-1:2,
    },
    Op: "<=",
    Right: &ast.IdentExpr{
        Name: "b",
        span: 1:6-1:7,
    },
    span: 1:1-1:7,
}
---

[TestParseExprNoErrors/GreaterThan - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 1:1-1:2,
    },
    Op: ">",
    Right: &ast.IdentExpr{
        Name: "b",
        span: 1:5-1:6,
    },
    span: 1:1-1:6,
}
---

[TestParseExprNoErrors/GreaterThanEqual - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 1:1-1:2,
    },
    Op: ">=",
    Right: &ast.IdentExpr{
        Name: "b",
        span: 1:6-1:7,
    },
    span: 1:1-1:7,
}
---

[TestParseExprNoErrors/LessThan - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 1:1-1:2,
    },
    Op: "<",
    Right: &ast.IdentExpr{
        Name: "b",
        span: 1:5-1:6,
    },
    span: 1:1-1:6,
}
---

[TestParseExprNoErrors/NotEqual - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 1:1-1:2,
    },
    Op: "!=",
    Right: &ast.IdentExpr{
        Name: "b",
        span: 1:6-1:7,
    },
    span: 1:1-1:7,
}
---

[TestParseExprNoErrors/Equal - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 1:1-1:2,
    },
    Op: "==",
    Right: &ast.IdentExpr{
        Name: "b",
        span: 1:6-1:7,
    },
    span: 1:1-1:7,
}
---

[TestParseExprNoErrors/FuncCall - 1]
&ast.CallExpr{
    Callee: &ast.IdentExpr{
        Name: "foo",
        span: 1:1-1:4,
    },
    span: 1:1-1:6,
}
---

[TestParseExprNoErrors/ObjectWithSpreads - 1]
&ast.ObjectExpr{
    Elems: []ast.ObjExprElem{
        &ast.PropertyExpr{
            Name: &ast.IdentExpr{
                Name: "a",
                span: 1:2-1:3,
            },
            span: 1:2-1:3,
        },
        &ast.ObjSpreadExpr{
            Value: &ast.IdentExpr{
                Name: "b",
                span: 1:8-1:9,
            },
            span: 1:5-1:9,
        },
        &ast.ObjSpreadExpr{
            Value: &ast.ObjectExpr{
                Elems: []ast.ObjExprElem{
                    &ast.PropertyExpr{
                        Name: &ast.IdentExpr{
                            Name: "c",
                            span: 1:15-1:16,
                        },
                        span: 1:15-1:16,
                    },
                    &ast.PropertyExpr{
                        Name: &ast.IdentExpr{
                            Name: "d",
                            span: 1:18-1:19,
                        },
                        span: 1:18-1:19,
                    },
                },
                span: 1:14-1:20,
            },
            span: 1:11-1:20,
        },
    },
    span: 1:1-1:21,
}
---

[TestParseExprNoErrors/MethodCall - 1]
&ast.BinaryExpr{
    Left: &ast.CallExpr{
        Callee: &ast.MemberExpr{
            Object: &ast.IdentExpr{
                Name: "foo",
                span: 1:1-1:4,
            },
            Prop: &ast.Ident{
                Name: "bar",
                span: 1:5-1:8,
            },
            span: 1:1-1:8,
        },
        span: 1:1-1:10,
    },
    Op: "/",
    Right: &ast.IdentExpr{
        Name: "baz",
        span: 1:11-1:14,
    },
    span: 1:1-1:14,
}
---

[TestParseExprNoErrors/RegexLiteral - 1]
&ast.LiteralExpr{
    Lit: &ast.RegexLit{
        Value: "/hello/gi",
        span: 1:1-1:9,
    },
    span: 1:1-1:9,
}
---

[TestParseExprNoErrors/Concatenation - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 1:1-1:2,
    },
    Op: "++",
    Right: &ast.IdentExpr{
        Name: "b",
        span: 1:6-1:7,
    },
    span: 1:1-1:7,
}
---

[TestParseExprNoErrors/MatchBasic - 1]
&ast.MatchExpr{
    Target: &ast.IdentExpr{
        Name: "x",
        span: 1:7-1:8,
    },
    Cases: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.LitPat{
                Lit: &ast.NumLit{
                    Value: 1,
                },
                span: 1:11-1:12,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.StrLit{
                        Value: "one",
                        span: 1:16-1:21,
                    },
                    span: 1:16-1:21,
                },
            },
            span: 1:10-1:21,
        },
        &ast.MatchCase{
            Pattern: &ast.LitPat{
                Lit: &ast.NumLit{
                    Value: 2,
                },
                span: 1:23-1:24,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.StrLit{
                        Value: "two",
                        span: 1:28-1:33,
                    },
                    span: 1:28-1:33,
                },
            },
            span: 1:22-1:33,
        },
    },
    span: 1:1-1:35,
}
---

[TestParseExprNoErrors/MatchComplex - 1]
&ast.MatchExpr{
    Target: &ast.IdentExpr{
        Name: "result",
        span: 1:7-1:13,
    },
    Cases: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.ExtractorPat{
                Name: &ast.Ident{
                    Name: "Some",
                    span: 1:16-1:20,
                },
                Args: []ast.Pat{
                    &ast.IdentPat{
                        Name: "value",
                        span: 1:21-1:26,
                    },
                },
                span: 1:16-1:27,
            },
            Guard: &ast.BinaryExpr{
                Left: &ast.IdentExpr{
                    Name: "value",
                    span: 1:31-1:36,
                },
                Op: ">",
                Right: &ast.LiteralExpr{
                    Lit: &ast.NumLit{
                        span: 1:39-1:40,
                    },
                    span: 1:39-1:40,
                },
                span: 1:31-1:40,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.IdentExpr{
                    Name: "value",
                    span: 1:44-1:49,
                },
            },
            span: 1:15-1:49,
        },
        &ast.MatchCase{
            Pattern: &ast.ExtractorPat{
                Name: &ast.Ident{
                    Name: "Some",
                    span: 1:51-1:55,
                },
                Args: []ast.Pat{
                    &ast.WildcardPat{
                        span: 1:56-1:57,
                    },
                },
                span: 1:51-1:58,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.NumLit{
                        span: 1:62-1:63,
                    },
                    span: 1:62-1:63,
                },
            },
            span: 1:50-1:63,
        },
        &ast.MatchCase{
            Pattern: &ast.IdentPat{
                Name: "None",
                span: 1:65-1:69,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.UnaryExpr{
                    Op: 1,
                    Arg: &ast.LiteralExpr{
                        Lit: &ast.NumLit{
                            Value: 1,
                            span: 1:74-1:75,
                        },
                        span: 1:74-1:75,
                    },
                    span: 1:73-1:75,
                },
            },
            span: 1:64-1:75,
        },
    },
    span: 1:1-1:77,
}
---

[TestParseExprNoErrors/MatchWithPatterns - 1]
&ast.MatchExpr{
    Target: &ast.IdentExpr{
        Name: "value",
        span: 1:7-1:12,
    },
    Cases: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.ObjectPat{
                Elems: []ast.ObjPatElem{
                    &ast.ObjShorthandPat{
                        Key: &ast.Ident{
                            Name: "name",
                            span: 1:16-1:20,
                        },
                        span: 1:16-1:20,
                    },
                },
                span: 1:15-1:21,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.IdentExpr{
                    Name: "name",
                    span: 1:25-1:29,
                },
            },
            span: 1:14-1:29,
        },
        &ast.MatchCase{
            Pattern: &ast.TuplePat{
                Elems: []ast.Pat{
                    &ast.IdentPat{
                        Name: "first",
                        span: 1:32-1:37,
                    },
                    &ast.RestPat{
                        Pattern: &ast.IdentPat{
                            Name: "rest",
                            span: 1:42-1:46,
                        },
                        span: 1:39-1:46,
                    },
                },
                span: 1:31-1:47,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.IdentExpr{
                    Name: "first",
                    span: 1:51-1:56,
                },
            },
            span: 1:30-1:56,
        },
        &ast.MatchCase{
            Pattern: &ast.WildcardPat{
                span: 1:58-1:59,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.NullLit{
                        span: 1:63-1:67,
                    },
                    span: 1:63-1:67,
                },
            },
            span: 1:57-1:67,
        },
    },
    span: 1:1-1:69,
}
---

[TestParseExprNoErrors/MatchWithGuard - 1]
&ast.MatchExpr{
    Target: &ast.IdentExpr{
        Name: "x",
        span: 1:7-1:8,
    },
    Cases: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.TuplePat{
                Elems: []ast.Pat{
                    &ast.IdentPat{
                        Name: "a",
                        span: 1:12-1:13,
                    },
                    &ast.IdentPat{
                        Name: "b",
                        span: 1:15-1:16,
                    },
                },
                span: 1:11-1:17,
            },
            Guard: &ast.BinaryExpr{
                Left: &ast.IdentExpr{
                    Name: "a",
                    span: 1:21-1:22,
                },
                Op: ">",
                Right: &ast.IdentExpr{
                    Name: "b",
                    span: 1:25-1:26,
                },
                span: 1:21-1:26,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.StrLit{
                        Value: "first is greater",
                        span: 1:30-1:48,
                    },
                    span: 1:30-1:48,
                },
            },
            span: 1:10-1:48,
        },
    },
    span: 1:1-1:50,
}
---

[TestParseExprNoErrors/MatchWithBlock - 1]
&ast.MatchExpr{
    Target: &ast.IdentExpr{
        Name: "x",
        span: 1:7-1:8,
    },
    Cases: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.WildcardPat{
                span: 1:11-1:12,
            },
            Body: ast.BlockOrExpr{
                Block: &ast.Block{
                    Stmts: []ast.Stmt{
                        &ast.ExprStmt{
                            Expr: &ast.CallExpr{
                                Callee: &ast.MemberExpr{
                                    Object: &ast.IdentExpr{
                                        Name: "console",
                                        span: 2:3-2:10,
                                    },
                                    Prop: &ast.Ident{
                                        Name: "log",
                                        span: 2:11-2:14,
                                    },
                                    span: 2:3-2:14,
                                },
                                Args: []ast.Expr{
                                    &ast.IdentExpr{
                                        Name: "x",
                                        span: 2:15-2:16,
                                    },
                                },
                                span: 2:3-2:17,
                            },
                            span: 2:3-2:17,
                        },
                        &ast.ExprStmt{
                            Expr: &ast.LiteralExpr{
                                Lit: &ast.StrLit{
                                    Value: "unknown",
                                    span: 3:3-3:12,
                                },
                                span: 3:3-3:12,
                            },
                            span: 3:3-3:12,
                        },
                    },
                    Span: 1:16-4:2,
                },
            },
            span: 1:10-4:2,
        },
    },
    span: 1:1-4:4,
}
---

[TestParseExprErrorHandling/MatchMissingOpeningBrace - 1]
&ast.MatchExpr{
    Target: &ast.IdentExpr{
        Name: "x",
        span: 1:7-1:8,
    },
    span: 1:1-1:13,
}
---

[TestParseExprErrorHandling/MatchMissingPattern - 1]
&ast.MatchExpr{
    Target: &ast.IdentExpr{
        Name: "x",
        span: 1:7-1:8,
    },
    span: 1:1-1:13,
}
---

[TestParseExprErrorHandling/MatchMissingOpeningBrace - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:9-1:10,
        Message: "Expected { but got number",
    },
    &parser.Error{
        Span: 1:11-1:13,
        Message: "Expected a pattern",
    },
    &parser.Error{
        Span: 1:11-1:13,
        Message: "Expected pattern in match case",
    },
    &parser.Error{
        Span: 1:11-1:13,
        Message: "Expected } but got =>",
    },
}
---

[TestParseExprErrorHandling/MatchMissingTarget - 1]
&ast.MatchExpr{
    Target: &ast.ObjectExpr{
        span: 1:7-1:13,
    },
    span: 1:1-1:21,
}
---

[TestParseExprErrorHandling/MatchMissingPattern - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:11-1:13,
        Message: "Expected a pattern",
    },
    &parser.Error{
        Span: 1:11-1:13,
        Message: "Expected pattern in match case",
    },
    &parser.Error{
        Span: 1:11-1:13,
        Message: "Expected } but got =>",
    },
}
---

[TestParseExprErrorHandling/MatchMissingClosingBrace - 1]
&ast.MatchExpr{
    Target: &ast.IdentExpr{
        Name: "x",
        span: 1:7-1:8,
    },
    Cases: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.LitPat{
                Lit: &ast.NumLit{
                    Value: 1,
                },
                span: 1:11-1:12,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.StrLit{
                        Value: "one",
                        span: 1:16-1:21,
                    },
                    span: 1:16-1:21,
                },
            },
            span: 1:10-1:21,
        },
    },
    span: 1:1-1:21,
}
---

[TestParseExprErrorHandling/MatchMissingTarget - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:11-1:13,
        Message: "Expected a comma or closing brace",
    },
    &parser.Error{
        Span: 1:11-1:13,
        Message: "Expected } but got =>",
    },
    &parser.Error{
        Span: 1:14-1:19,
        Message: "Expected { but got string",
    },
}
---

[TestParseExprErrorHandling/MatchMissingClosingBrace - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:21-1:21,
        Message: "Expected } but got ",
    },
}
---

[TestParseExprErrorHandling/MatchMissingBody - 1]
&ast.MatchExpr{
    Target: &ast.IdentExpr{
        Name: "x",
        span: 1:7-1:8,
    },
    Cases: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.LitPat{
                Lit: &ast.NumLit{
                    Value: 1,
                },
                span: 1:11-1:12,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.ErrorExpr{
                    span: 1:16-1:17,
                },
            },
            span: 1:10-1:17,
        },
    },
    span: 1:1-1:17,
}
---

[TestParseExprErrorHandling/MatchMissingArrow - 1]
&ast.MatchExpr{
    Target: &ast.IdentExpr{
        Name: "x",
        span: 1:7-1:8,
    },
    Cases: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.LitPat{
                Lit: &ast.NumLit{
                    Value: 1,
                },
                span: 1:11-1:12,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.ErrorExpr{
                    span: 1:19-1:20,
                },
            },
            span: 1:10-1:20,
        },
    },
    span: 1:1-1:20,
}
---

[TestParseExprErrorHandling/MatchIncompleteGuard - 1]
&ast.MatchExpr{
    Target: &ast.IdentExpr{
        Name: "x",
        span: 1:7-1:8,
    },
    Cases: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.LitPat{
                Lit: &ast.NumLit{
                    Value: 1,
                },
                span: 1:11-1:12,
            },
            Guard: &ast.LiteralExpr{
                Lit: &ast.StrLit{
                    Value: "one",
                    span: 1:19-1:24,
                },
                span: 1:19-1:24,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.ErrorExpr{
                    span: 1:26-1:26,
                },
            },
            span: 1:10-1:26,
        },
    },
    span: 1:1-1:26,
}
---

[TestParseExprErrorHandling/MatchMissingBody - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:16-1:17,
        Message: "Expected an expression",
    },
}
---

[TestParseExprErrorHandling/MatchMissingArrow - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:13-1:18,
        Message: "Expected => but got string",
    },
    &parser.Error{
        Span: 1:19-1:20,
        Message: "Expected an expression",
    },
}
---

[TestParseExprErrorHandling/MatchIncompleteGuard - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:16-1:18,
        Message: "Unexpected token, '=>'",
    },
    &parser.Error{
        Span: 1:25-1:26,
        Message: "Expected => but got }",
    },
    &parser.Error{
        Span: 1:26-1:26,
        Message: "Expected an expression",
    },
    &parser.Error{
        Span: 1:26-1:26,
        Message: "Expected } but got ",
    },
}
---

[TestParseExprNoErrors/TryCatch - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.CallExpr{
                    Callee: &ast.IdentExpr{
                        Name: "riskyOperation",
                        span: 1:7-1:21,
                    },
                    span: 1:7-1:23,
                },
                span: 1:7-1:23,
            },
        },
        Span: 1:5-1:25,
    },
    Catch: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.IdentPat{
                Name: "error",
                span: 1:34-1:39,
            },
            Body: ast.BlockOrExpr{
                Block: &ast.Block{
                    Stmts: []ast.Stmt{
                        &ast.ExprStmt{
                            Expr: &ast.CallExpr{
                                Callee: &ast.MemberExpr{
                                    Object: &ast.IdentExpr{
                                        Name: "console",
                                        span: 1:45-1:52,
                                    },
                                    Prop: &ast.Ident{
                                        Name: "log",
                                        span: 1:53-1:56,
                                    },
                                    span: 1:45-1:56,
                                },
                                Args: []ast.Expr{
                                    &ast.IdentExpr{
                                        Name: "error",
                                        span: 1:57-1:62,
                                    },
                                },
                                span: 1:45-1:63,
                            },
                            span: 1:45-1:63,
                        },
                    },
                    Span: 1:43-1:65,
                },
            },
            span: 1:33-1:65,
        },
    },
    span: 1:1-1:65,
}
---

[TestParseExprNoErrors/NestedTry - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.TryCatchExpr{
                    Try: ast.Block{
                        Stmts: []ast.Stmt{
                            &ast.ExprStmt{
                                Expr: &ast.CallExpr{
                                    Callee: &ast.IdentExpr{
                                        Name: "innerOperation",
                                        span: 1:13-1:27,
                                    },
                                    span: 1:13-1:29,
                                },
                                span: 1:13-1:29,
                            },
                        },
                        Span: 1:11-1:31,
                    },
                    Catch: []*ast.MatchCase{
                        &ast.MatchCase{
                            Pattern: &ast.WildcardPat{
                                span: 1:40-1:41,
                            },
                            Body: ast.BlockOrExpr{
                                Expr: &ast.LiteralExpr{
                                    Lit: &ast.NullLit{
                                        span: 1:45-1:49,
                                    },
                                    span: 1:45-1:49,
                                },
                            },
                            span: 1:39-1:49,
                        },
                    },
                    span: 1:7-1:49,
                },
                span: 1:7-1:49,
            },
        },
        Span: 1:5-1:53,
    },
    Catch: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.IdentPat{
                Name: "outer",
                span: 1:62-1:67,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.IdentExpr{
                    Name: "outer",
                    span: 1:71-1:76,
                },
            },
            span: 1:61-1:76,
        },
    },
    span: 1:1-1:76,
}
---

[TestParseExprNoErrors/TryBasic - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.CallExpr{
                    Callee: &ast.IdentExpr{
                        Name: "riskyOperation",
                        span: 1:7-1:21,
                    },
                    span: 1:7-1:23,
                },
                span: 1:7-1:23,
            },
        },
        Span: 1:5-1:25,
    },
    span: 1:1-1:25,
}
---

[TestParseExprNoErrors/TryCatchWithGuard - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.CallExpr{
                    Callee: &ast.IdentExpr{
                        Name: "getValue",
                        span: 1:7-1:15,
                    },
                    span: 1:7-1:17,
                },
                span: 1:7-1:17,
            },
        },
        Span: 1:5-1:19,
    },
    Catch: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.IdentPat{
                Name: "error",
                span: 1:28-1:33,
            },
            Guard: &ast.BinaryExpr{
                Left: &ast.MemberExpr{
                    Object: &ast.IdentExpr{
                        Name: "error",
                        span: 1:37-1:42,
                    },
                    Prop: &ast.Ident{
                        Name: "code",
                        span: 1:43-1:47,
                    },
                    span: 1:37-1:47,
                },
                Op: "==",
                Right: &ast.LiteralExpr{
                    Lit: &ast.NumLit{
                        Value: 404,
                        span: 1:51-1:54,
                    },
                    span: 1:51-1:54,
                },
                span: 1:37-1:54,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.StrLit{
                        Value: "Not found",
                        span: 1:58-1:69,
                    },
                    span: 1:58-1:69,
                },
            },
            span: 1:27-1:69,
        },
        &ast.MatchCase{
            Pattern: &ast.IdentPat{
                Name: "error",
                span: 1:71-1:76,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.MemberExpr{
                    Object: &ast.IdentExpr{
                        Name: "error",
                        span: 1:80-1:85,
                    },
                    Prop: &ast.Ident{
                        Name: "message",
                        span: 1:86-1:93,
                    },
                    span: 1:80-1:93,
                },
            },
            span: 1:70-1:93,
        },
    },
    span: 1:1-1:93,
}
---

[TestParseExprNoErrors/TryCatchMultipleCases - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.CallExpr{
                    Callee: &ast.IdentExpr{
                        Name: "operation",
                        span: 1:7-1:16,
                    },
                    span: 1:7-1:18,
                },
                span: 1:7-1:18,
            },
        },
        Span: 1:5-1:20,
    },
    Catch: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.ExtractorPat{
                Name: &ast.Ident{
                    Name: "NetworkError",
                    span: 1:29-1:41,
                },
                Args: []ast.Pat{
                    &ast.IdentPat{
                        Name: "msg",
                        span: 1:42-1:45,
                    },
                },
                span: 1:29-1:46,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.BinaryExpr{
                    Left: &ast.LiteralExpr{
                        Lit: &ast.StrLit{
                            Value: "Network: ",
                            span: 1:50-1:61,
                        },
                        span: 1:50-1:61,
                    },
                    Op: "++",
                    Right: &ast.IdentExpr{
                        Name: "msg",
                        span: 1:65-1:68,
                    },
                    span: 1:50-1:68,
                },
            },
            span: 1:28-1:68,
        },
        &ast.MatchCase{
            Pattern: &ast.IdentPat{
                Name: "TimeoutError",
                span: 1:70-1:82,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.StrLit{
                        Value: "Timeout",
                        span: 1:86-1:95,
                    },
                    span: 1:86-1:95,
                },
            },
            span: 1:69-1:95,
        },
        &ast.MatchCase{
            Pattern: &ast.WildcardPat{
                span: 1:97-1:98,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.StrLit{
                        Value: "Unknown error",
                        span: 1:102-1:117,
                    },
                    span: 1:102-1:117,
                },
            },
            span: 1:96-1:117,
        },
    },
    span: 1:1-1:117,
}
---

[TestParseExprNoErrors/TryCatchWithBlockBody - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.CallExpr{
                    Callee: &ast.IdentExpr{
                        Name: "complexOperation",
                        span: 1:7-1:23,
                    },
                    span: 1:7-1:25,
                },
                span: 1:7-1:25,
            },
        },
        Span: 1:5-1:27,
    },
    Catch: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.IdentPat{
                Name: "error",
                span: 1:36-1:41,
            },
            Body: ast.BlockOrExpr{
                Block: &ast.Block{
                    Stmts: []ast.Stmt{
                        &ast.ExprStmt{
                            Expr: &ast.CallExpr{
                                Callee: &ast.IdentExpr{
                                    Name: "logError",
                                    span: 2:3-2:11,
                                },
                                Args: []ast.Expr{
                                    &ast.IdentExpr{
                                        Name: "error",
                                        span: 2:12-2:17,
                                    },
                                },
                                span: 2:3-2:18,
                            },
                            span: 2:3-2:18,
                        },
                        &ast.ExprStmt{
                            Expr: &ast.LiteralExpr{
                                Lit: &ast.StrLit{
                                    Value: "Failed",
                                    span: 3:3-3:11,
                                },
                                span: 3:3-3:11,
                            },
                            span: 3:3-3:11,
                        },
                    },
                    Span: 1:45-4:2,
                },
            },
            span: 1:35-4:2,
        },
    },
    span: 1:1-4:2,
}
---

[TestParseExprErrorHandling/TryMissingOpeningBrace - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Span: 1:5-1:12,
    },
    span: 1:1-1:12,
}
---

[TestParseExprErrorHandling/TryCatchMissingOpeningBrace - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.CallExpr{
                    Callee: &ast.IdentExpr{
                        Name: "operation",
                        span: 1:7-1:16,
                    },
                    span: 1:7-1:18,
                },
                span: 1:7-1:18,
            },
        },
        Span: 1:5-1:20,
    },
    span: 1:1-1:20,
}
---

[TestParseExprErrorHandling/TryMissingBlock - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Span: 1:4-1:4,
    },
    span: 1:1-1:4,
}
---

[TestParseExprErrorHandling/TryMissingOpeningBrace - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:5-1:12,
        Message: "Expected an opening brace",
    },
}
---

[TestParseExprErrorHandling/TryCatchMissingBody - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.CallExpr{
                    Callee: &ast.IdentExpr{
                        Name: "operation",
                        span: 1:7-1:16,
                    },
                    span: 1:7-1:18,
                },
                span: 1:7-1:18,
            },
        },
        Span: 1:5-1:20,
    },
    Catch: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.IdentPat{
                Name: "error",
                span: 1:29-1:34,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.ErrorExpr{
                    span: 1:38-1:39,
                },
            },
            span: 1:28-1:39,
        },
    },
    span: 1:1-1:39,
}
---

[TestParseExprErrorHandling/TryCatchMissingOpeningBrace - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:27-1:32,
        Message: "Expected { but got identifier",
    },
    &parser.Error{
        Span: 1:33-1:35,
        Message: "Expected a pattern",
    },
    &parser.Error{
        Span: 1:33-1:35,
        Message: "Expected pattern in match case",
    },
    &parser.Error{
        Span: 1:33-1:35,
        Message: "Expected } but got =>",
    },
}
---

[TestParseExprErrorHandling/TryCatchIncompleteGuard - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.CallExpr{
                    Callee: &ast.IdentExpr{
                        Name: "operation",
                        span: 1:7-1:16,
                    },
                    span: 1:7-1:18,
                },
                span: 1:7-1:18,
            },
        },
        Span: 1:5-1:20,
    },
    Catch: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.IdentPat{
                Name: "error",
                span: 1:29-1:34,
            },
            Guard: &ast.LiteralExpr{
                Lit: &ast.StrLit{
                    Value: "failed",
                    span: 1:41-1:49,
                },
                span: 1:41-1:49,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.ErrorExpr{
                    span: 1:51-1:51,
                },
            },
            span: 1:28-1:51,
        },
    },
    span: 1:1-1:51,
}
---

[TestParseExprErrorHandling/TryCatchMissingBody - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:38-1:39,
        Message: "Expected an expression",
    },
}
---

[TestParseExprErrorHandling/TryCatchMissingPattern - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.CallExpr{
                    Callee: &ast.IdentExpr{
                        Name: "operation",
                        span: 1:7-1:16,
                    },
                    span: 1:7-1:18,
                },
                span: 1:7-1:18,
            },
        },
        Span: 1:5-1:20,
    },
    span: 1:1-1:20,
}
---

[TestParseExprErrorHandling/TryCatchMissingClosingBrace - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.CallExpr{
                    Callee: &ast.IdentExpr{
                        Name: "operation",
                        span: 1:7-1:16,
                    },
                    span: 1:7-1:18,
                },
                span: 1:7-1:18,
            },
        },
        Span: 1:5-1:20,
    },
    Catch: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.IdentPat{
                Name: "error",
                span: 1:29-1:34,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.IdentExpr{
                    Name: "error",
                    span: 1:38-1:43,
                },
            },
            span: 1:28-1:43,
        },
    },
    span: 1:1-1:43,
}
---

[TestParseExprErrorHandling/TryMissingBlock - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:4-1:4,
        Message: "Expected an opening brace",
    },
}
---

[TestParseExprErrorHandling/TryCatchIncompleteGuard - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:38-1:40,
        Message: "Unexpected token, '=>'",
    },
    &parser.Error{
        Span: 1:50-1:51,
        Message: "Expected => but got }",
    },
    &parser.Error{
        Span: 1:51-1:51,
        Message: "Expected an expression",
    },
    &parser.Error{
        Span: 1:51-1:51,
        Message: "Expected } but got ",
    },
}
---

[TestParseExprErrorHandling/TryCatchMissingPattern - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:29-1:31,
        Message: "Expected a pattern",
    },
    &parser.Error{
        Span: 1:29-1:31,
        Message: "Expected pattern in match case",
    },
    &parser.Error{
        Span: 1:29-1:31,
        Message: "Expected } but got =>",
    },
}
---

[TestParseExprErrorHandling/TryCatchMissingArrow - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.CallExpr{
                    Callee: &ast.IdentExpr{
                        Name: "operation",
                        span: 1:7-1:16,
                    },
                    span: 1:7-1:18,
                },
                span: 1:7-1:18,
            },
        },
        Span: 1:5-1:20,
    },
    Catch: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.IdentPat{
                Name: "error",
                span: 1:29-1:34,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.ErrorExpr{
                    span: 1:44-1:45,
                },
            },
            span: 1:28-1:45,
        },
    },
    span: 1:1-1:45,
}
---

[TestParseExprErrorHandling/TryCatchMissingClosingBrace - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:43-1:43,
        Message: "Expected } but got ",
    },
}
---

[TestParseExprErrorHandling/TryCatchMissingArrow - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:35-1:43,
        Message: "Expected => but got string",
    },
    &parser.Error{
        Span: 1:44-1:45,
        Message: "Expected an expression",
    },
}
---

[TestParseExprNoErrors/FuncExprWithReturnType - 1]
&ast.FuncExpr{
    FuncSig: ast.FuncSig{
        Params: []*ast.Param{
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "a",
                    span: 1:5-1:6,
                },
            },
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "b",
                    span: 1:8-1:9,
                },
            },
        },
        Return: &ast.NumberTypeAnn{
            span: 1:14-1:20,
        },
    },
    Body: &ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.BinaryExpr{
                    Left: &ast.IdentExpr{
                        Name: "a",
                        span: 1:23-1:24,
                    },
                    Op: "+",
                    Right: &ast.IdentExpr{
                        Name: "b",
                        span: 1:27-1:28,
                    },
                    span: 1:23-1:28,
                },
                span: 1:23-1:28,
            },
        },
        Span: 1:21-1:30,
    },
    span: 1:1-1:30,
}
---

[TestParseExprNoErrors/FuncExprWithThrows - 1]
&ast.FuncExpr{
    FuncSig: ast.FuncSig{
        Params: []*ast.Param{
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "a",
                    span: 1:5-1:6,
                },
            },
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "b",
                    span: 1:8-1:9,
                },
            },
        },
        Return: &ast.NumberTypeAnn{
            span: 1:14-1:20,
        },
        Throws: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "Error",
                span: 1:28-1:33,
            },
            span: 1:28-1:33,
        },
    },
    Body: &ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.BinaryExpr{
                    Left: &ast.IdentExpr{
                        Name: "a",
                        span: 1:36-1:37,
                    },
                    Op: "+",
                    Right: &ast.IdentExpr{
                        Name: "b",
                        span: 1:40-1:41,
                    },
                    span: 1:36-1:41,
                },
                span: 1:36-1:41,
            },
        },
        Span: 1:34-1:43,
    },
    span: 1:1-1:43,
}
---

[TestParseExprNoErrors/ThrowExpression - 1]
&ast.ThrowExpr{
    Arg: &ast.CallExpr{
        Callee: &ast.IdentExpr{
            Name: "computeError",
            span: 1:7-1:19,
        },
        span: 1:7-1:21,
    },
    span: 1:1-1:21,
}
---

[TestParseExprNoErrors/ThrowVariable - 1]
&ast.ThrowExpr{
    Arg: &ast.IdentExpr{
        Name: "error",
        span: 1:7-1:12,
    },
    span: 1:1-1:12,
}
---

[TestParseExprErrorHandling/ThrowMissingExpression - 1]
&ast.ThrowExpr{
    Arg: &ast.ErrorExpr{
        span: 1:6-1:6,
    },
    span: 1:1-1:6,
}
---

[TestParseExprErrorHandling/ThrowMissingExpression - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:6-1:6,
        Message: "Expected an expression",
    },
}
---

[TestParseExprNoErrors/ThrowStringLiteral - 1]
&ast.ThrowExpr{
    Arg: &ast.LiteralExpr{
        Lit: &ast.StrLit{
            Value: "divide by zero",
            span: 1:7-1:23,
        },
        span: 1:7-1:23,
    },
    span: 1:1-1:23,
}
---

[TestParseExprNoErrors/FuncExprReturnIfElse - 1]
&ast.FuncExpr{
    FuncSig: ast.FuncSig{
        Params: []*ast.Param{
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "value",
                    span: 1:5-1:10,
                },
                TypeAnn: &ast.StringTypeAnn{
                    span: 1:12-1:18,
                },
            },
        },
    },
    Body: &ast.Block{
        Stmts: []ast.Stmt{
            &ast.ReturnStmt{
                Expr: &ast.IfElseExpr{
                    Cond: &ast.BinaryExpr{
                        Left: &ast.IdentExpr{
                            Name: "value",
                            span: 1:32-1:37,
                        },
                        Op: "!=",
                        Right: &ast.LiteralExpr{
                            Lit: &ast.StrLit{
                                span: 1:41-1:43,
                            },
                            span: 1:41-1:43,
                        },
                        span: 1:32-1:43,
                    },
                    Cons: ast.Block{
                        Stmts: []ast.Stmt{
                            &ast.ExprStmt{
                                Expr: &ast.IdentExpr{
                                    Name: "value",
                                    span: 1:46-1:51,
                                },
                                span: 1:46-1:51,
                            },
                        },
                        Span: 1:44-1:53,
                    },
                    Alt: &ast.BlockOrExpr{
                        Block: &ast.Block{
                            Stmts: []ast.Stmt{
                                &ast.ExprStmt{
                                    Expr: &ast.LiteralExpr{
                                        Lit: &ast.StrLit{
                                            Value: "value is empty",
                                            span: 1:61-1:77,
                                        },
                                        span: 1:61-1:77,
                                    },
                                    span: 1:61-1:77,
                                },
                            },
                            Span: 1:59-1:79,
                        },
                    },
                    span: 1:28-1:79,
                },
                span: 1:22-1:79,
            },
        },
        Span: 1:20-1:81,
    },
    span: 1:1-1:81,
}
---

[TestParseExprNoErrors/BasicObjectWithTypeAssertions - 1]
&ast.ObjectExpr{
    Elems: []ast.ObjExprElem{
        &ast.PropertyExpr{
            Name: &ast.NumLit{
                span: 1:3-1:4,
            },
            Value: &ast.TypeCastExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.StrLit{
                        Value: "hello",
                        span: 1:6-1:13,
                    },
                    span: 1:6-1:13,
                },
                TypeAnn: &ast.StringTypeAnn{
                    span: 1:14-1:20,
                },
                span: 1:6-1:20,
            },
            span: 1:3-1:20,
        },
        &ast.PropertyExpr{
            Name: &ast.IdentExpr{
                Name: "foo",
                span: 1:22-1:25,
            },
            Value: &ast.TypeCastExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.NumLit{
                        Value: 5,
                        span: 1:27-1:28,
                    },
                    span: 1:27-1:28,
                },
                TypeAnn: &ast.NumberTypeAnn{
                    span: 1:29-1:35,
                },
                span: 1:27-1:35,
            },
            span: 1:22-1:35,
        },
        &ast.PropertyExpr{
            Name: &ast.StrLit{
                Value: "bar",
                span: 1:37-1:42,
            },
            Optional: true,
            Value: &ast.TypeCastExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.BoolLit{
                        Value: true,
                        span: 1:45-1:49,
                    },
                    span: 1:45-1:49,
                },
                TypeAnn: &ast.BooleanTypeAnn{
                    span: 1:50-1:57,
                },
                span: 1:45-1:57,
            },
            span: 1:37-1:57,
        },
        &ast.PropertyExpr{
            Name: &ast.IdentExpr{
                Name: "baz",
                span: 1:59-1:62,
            },
            span: 1:59-1:62,
        },
        &ast.PropertyExpr{
            Name: &ast.ComputedKey{
                Expr: &ast.IdentExpr{
                    Name: "qux",
                    span: 1:65-1:68,
                },
            },
            Value: &ast.TypeCastExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.BoolLit{
                        span: 1:71-1:76,
                    },
                    span: 1:71-1:76,
                },
                TypeAnn: &ast.BooleanTypeAnn{
                    span: 1:77-1:84,
                },
                span: 1:71-1:84,
            },
            span: 1:65-1:84,
        },
    },
    span: 1:1-1:86,
}
---

[TestParseExprNoErrors/TypeCastChain - 1]
&ast.TypeCastExpr{
    Expr: &ast.TypeCastExpr{
        Expr: &ast.IdentExpr{
            Name: "value",
            span: 1:1-1:6,
        },
        TypeAnn: &ast.StringTypeAnn{
            span: 1:8-1:14,
        },
        span: 1:1-1:14,
    },
    TypeAnn: &ast.UnknownTypeAnn{
        span: 1:16-1:23,
    },
    span: 1:1-1:23,
}
---

[TestParseExprNoErrors/TypeCast - 1]
&ast.TypeCastExpr{
    Expr: &ast.IdentExpr{
        Name: "value",
        span: 1:1-1:6,
    },
    TypeAnn: &ast.StringTypeAnn{
        span: 1:8-1:14,
    },
    span: 1:1-1:14,
}
---

[TestParseExprNoErrors/TypeCastPrecedence - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 1:1-1:2,
    },
    Op: "+",
    Right: &ast.TypeCastExpr{
        Expr: &ast.IdentExpr{
            Name: "b",
            span: 1:5-1:6,
        },
        TypeAnn: &ast.NumberTypeAnn{
            span: 1:8-1:14,
        },
        span: 1:5-1:14,
    },
    span: 1:1-1:14,
}
---

[TestParseExprNoErrors/FuncExprWithTypeParams - 1]
&ast.FuncExpr{
    FuncSig: ast.FuncSig{
        TypeParams: []*ast.TypeParam{
            &ast.TypeParam{
                Name: "T",
            },
        },
        Params: []*ast.Param{
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "value",
                    span: 1:8-1:13,
                },
                TypeAnn: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 1:15-1:16,
                    },
                    span: 1:15-1:16,
                },
            },
        },
        Return: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "T",
                span: 1:21-1:22,
            },
            span: 1:21-1:22,
        },
    },
    Body: &ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.IdentExpr{
                    Name: "value",
                    span: 1:25-1:30,
                },
                span: 1:25-1:30,
            },
        },
        Span: 1:23-1:32,
    },
    span: 1:1-1:32,
}
---

[TestParseExprNoErrors/FuncExprWithMultipleTypeParams - 1]
&ast.FuncExpr{
    FuncSig: ast.FuncSig{
        TypeParams: []*ast.TypeParam{
            &ast.TypeParam{
                Name: "A",
            },
            &ast.TypeParam{
                Name: "B",
            },
        },
        Params: []*ast.Param{
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "a",
                    span: 1:11-1:12,
                },
                TypeAnn: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "A",
                        span: 1:14-1:15,
                    },
                    span: 1:14-1:15,
                },
            },
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "b",
                    span: 1:17-1:18,
                },
                TypeAnn: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "B",
                        span: 1:20-1:21,
                    },
                    span: 1:20-1:21,
                },
            },
        },
        Return: &ast.TupleTypeAnn{
            Elems: []ast.TypeAnn{
                &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "A",
                        span: 1:27-1:28,
                    },
                    span: 1:27-1:28,
                },
                &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "B",
                        span: 1:30-1:31,
                    },
                    span: 1:30-1:31,
                },
            },
            span: 1:26-1:32,
        },
    },
    Body: &ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.TupleExpr{
                    Elems: []ast.Expr{
                        &ast.IdentExpr{
                            Name: "a",
                            span: 1:36-1:37,
                        },
                        &ast.IdentExpr{
                            Name: "b",
                            span: 1:39-1:40,
                        },
                    },
                    span: 1:35-1:41,
                },
                span: 1:35-1:41,
            },
        },
        Span: 1:33-1:43,
    },
    span: 1:1-1:43,
}
---

[TestParseExprNoErrors/MatchClassInstance - 1]
&ast.MatchExpr{
    Target: &ast.IdentExpr{
        Name: "shape",
        span: 2:11-2:16,
    },
    Cases: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.InstancePat{
                ClassName: &ast.Ident{
                    Name: "Point",
                    span: 3:6-3:11,
                },
                Object: &ast.ObjectPat{
                    Elems: []ast.ObjPatElem{
                        &ast.ObjShorthandPat{
                            Key: &ast.Ident{
                                Name: "x",
                                span: 3:13-3:14,
                            },
                            span: 3:13-3:14,
                        },
                        &ast.ObjShorthandPat{
                            Key: &ast.Ident{
                                Name: "y",
                                span: 3:16-3:17,
                            },
                            span: 3:16-3:17,
                        },
                    },
                    span: 3:6-3:18,
                },
                span: 3:6-3:18,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.BinaryExpr{
                    Left: &ast.IdentExpr{
                        Name: "x",
                        span: 3:22-3:23,
                    },
                    Op: "+",
                    Right: &ast.IdentExpr{
                        Name: "y",
                        span: 3:26-3:27,
                    },
                    span: 3:22-3:27,
                },
            },
            span: 2:18-3:27,
        },
        &ast.MatchCase{
            Pattern: &ast.InstancePat{
                ClassName: &ast.Ident{
                    Name: "Circle",
                    span: 4:6-4:12,
                },
                Object: &ast.ObjectPat{
                    Elems: []ast.ObjPatElem{
                        &ast.ObjShorthandPat{
                            Key: &ast.Ident{
                                Name: "radius",
                                span: 4:14-4:20,
                            },
                            span: 4:14-4:20,
                        },
                    },
                    span: 4:6-4:21,
                },
                span: 4:6-4:21,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.BinaryExpr{
                    Left: &ast.IdentExpr{
                        Name: "radius",
                        span: 4:25-4:31,
                    },
                    Op: "*",
                    Right: &ast.LiteralExpr{
                        Lit: &ast.NumLit{
                            Value: 2,
                            span: 4:34-4:35,
                        },
                        span: 4:34-4:35,
                    },
                    span: 4:25-4:35,
                },
            },
            span: 3:28-4:35,
        },
    },
    span: 2:5-5:6,
}
---

[TestParseExprErrorHandling/ArraySpreadMissingOperand - 1]
&ast.TupleExpr{
    span: 1:1-1:6,
}
---

[TestParseExprErrorHandling/ObjectSpreadMissingOperand - 1]
&ast.ObjectExpr{
    span: 1:1-1:6,
}
---

[TestParseExprErrorHandling/ArraySpreadMissingOperand - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:2-1:5,
        Message: "Expected an expression after '...'",
    },
}
---

[TestParseExprErrorHandling/ObjectSpreadMissingOperand - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:2-1:5,
        Message: "Expected an expression after '...'",
    },
}
---

[TestParseExprErrorHandling/ObjectSpreadMissingOperandBeforeComma - 1]
&ast.ObjectExpr{
    span: 1:1-1:6,
}
---

[TestParseExprErrorHandling/ArraySpreadMissingOperandBeforeComma - 1]
&ast.TupleExpr{
    span: 1:1-1:6,
}
---

[TestParseExprErrorHandling/ObjectSpreadMissingOperandBeforeComma - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:2-1:5,
        Message: "Expected an expression after '...'",
    },
    &parser.Error{
        Span: 1:5-1:6,
        Message: "Expected } but got ,",
    },
}
---

[TestParseExprErrorHandling/ArraySpreadMissingOperandBeforeComma - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:2-1:5,
        Message: "Expected an expression after '...'",
    },
    &parser.Error{
        Span: 1:5-1:6,
        Message: "Expected ] but got ,",
    },
}
---

[TestParseExprNoErrors/YieldWithValue - 1]
&ast.YieldExpr{
    Value: &ast.LiteralExpr{
        Lit: &ast.NumLit{
            Value: 1,
            span: 1:7-1:8,
        },
        span: 1:7-1:8,
    },
    span: 1:1-1:8,
}
---

[TestParseExprNoErrors/YieldInBinaryExpr - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "x",
        span: 1:1-1:2,
    },
    Op: "+",
    Right: &ast.YieldExpr{
        Value: &ast.LiteralExpr{
            Lit: &ast.NumLit{
                Value: 1,
                span: 1:11-1:12,
            },
            span: 1:11-1:12,
        },
        span: 1:5-1:12,
    },
    span: 1:1-1:12,
}
---

[TestParseExprNoErrors/BareYield - 1]
&ast.YieldExpr{
    span: 1:1-1:6,
}
---

[TestParseExprNoErrors/YieldFromInBinaryExpr - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "x",
        span: 1:1-1:2,
    },
    Op: "+",
    Right: &ast.YieldExpr{
        Value: &ast.IdentExpr{
            Name: "items",
            span: 1:16-1:21,
        },
        IsDelegate: true,
        span: 1:5-1:21,
    },
    span: 1:1-1:21,
}
---

[TestParseExprNoErrors/YieldFrom - 1]
&ast.YieldExpr{
    Value: &ast.IdentExpr{
        Name: "items",
        span: 1:12-1:17,
    },
    IsDelegate: true,
    span: 1:1-1:17,
}
---

[TestParseExprErrorHandling/IncompleteCallMissingCloseParen - 1]
&ast.CallExpr{
    Callee: &ast.IdentExpr{
        Name: "foo",
        span: 1:1-1:4,
    },
    Args: []ast.Expr{
        &ast.IdentExpr{
            Name: "a",
            span: 1:5-1:6,
        },
        &ast.IdentExpr{
            Name: "b",
            span: 1:8-1:9,
        },
    },
    span: 1:1-1:9,
}
---

[TestParseExprErrorHandling/IncompleteCallMissingCloseParen - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:4-1:5,
        Message: "Expected a closing paren",
    },
}
---

[TestParseExprErrorHandling/IncompleteIndex - 1]
&ast.IndexExpr{
    Object: &ast.IdentExpr{
        Name: "arr",
        span: 1:1-1:4,
    },
    Index: &ast.ErrorExpr{
        span: 1:5-1:5,
    },
    span: 1:1-1:5,
}
---

[TestParseExprErrorHandling/IncompleteIndex - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:5-1:5,
        Message: "Expected an expression",
    },
    &parser.Error{
        Span: 1:4-1:5,
        Message: "Expected a closing bracket",
    },
}
---

[TestParseExprErrorHandling/ObjectSetterShorthand - 1]
&ast.ObjectExpr{
    span: 1:1-1:6,
}
---

[TestParseExprErrorHandling/ObjectSetterShorthand - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:3-1:6,
        Message: "Method shorthand is not allowed in object literals; use a class instead",
    },
    &parser.Error{
        Span: 1:3-1:6,
        Message: "Expected } but got ",
    },
}
---

[TestParseExprErrorHandling/ObjectGetterShorthand - 1]
&ast.ObjectExpr{
    span: 1:1-1:6,
}
---

[TestParseExprErrorHandling/ObjectGetterShorthand - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:3-1:6,
        Message: "Method shorthand is not allowed in object literals; use a class instead",
    },
    &parser.Error{
        Span: 1:3-1:6,
        Message: "Expected } but got ",
    },
}
---

[TestParseExprErrorHandling/ObjectMethodShorthand - 1]
&ast.ObjectExpr{
    span: 1:1-1:7,
}
---

[TestParseExprErrorHandling/ObjectMethodShorthand - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:6-1:7,
        Message: "Method shorthand is not allowed in object literals; use a class instead",
    },
    &parser.Error{
        Span: 1:6-1:7,
        Message: "Expected } but got (",
    },
}
---

[TestParseExprNoErrors/BorrowImmutable - 1]
&ast.BorrowExpr{
    Arg: &ast.IdentExpr{
        Name: "p",
        span: 1:2-1:3,
    },
    span: 1:1-1:3,
}
---

[TestParseExprNoErrors/BorrowOfCallResult - 1]
&ast.BorrowExpr{
    Arg: &ast.CallExpr{
        Callee: &ast.IdentExpr{
            Name: "getValue",
            span: 1:2-1:10,
        },
        span: 1:2-1:12,
    },
    span: 1:1-1:12,
}
---

[TestParseExprNoErrors/BorrowOfMember - 1]
&ast.BorrowExpr{
    Arg: &ast.MemberExpr{
        Object: &ast.IdentExpr{
            Name: "obj",
            span: 1:2-1:5,
        },
        Prop: &ast.Ident{
            Name: "f",
            span: 1:6-1:7,
        },
        span: 1:2-1:7,
    },
    span: 1:1-1:7,
}
---

[TestParseExprNoErrors/BorrowMutable - 1]
&ast.BorrowExpr{
    Mut: true,
    Arg: &ast.IdentExpr{
        Name: "p",
        span: 1:6-1:7,
    },
    span: 1:1-1:7,
}
---

[TestParseExprNoErrors/BorrowMutableOfMember - 1]
&ast.BorrowExpr{
    Mut: true,
    Arg: &ast.MemberExpr{
        Object: &ast.IdentExpr{
            Name: "obj",
            span: 1:6-1:9,
        },
        Prop: &ast.Ident{
            Name: "f",
            span: 1:10-1:11,
        },
        span: 1:6-1:11,
    },
    span: 1:1-1:11,
}
---

[TestParseExprNoErrors/LogicalNotOfBorrowMutable - 1]
&ast.UnaryExpr{
    Op: 2,
    Arg: &ast.BorrowExpr{
        Mut: true,
        Arg: &ast.IdentExpr{
            Name: "p",
            span: 1:7-1:8,
        },
        span: 1:2-1:8,
    },
    span: 1:1-1:8,
}
---

[TestParseExprNoErrors/UnaryMinusOfBorrow - 1]
&ast.UnaryExpr{
    Op: 1,
    Arg: &ast.BorrowExpr{
        Arg: &ast.IdentExpr{
            Name: "p",
            span: 1:3-1:4,
        },
        span: 1:2-1:4,
    },
    span: 1:1-1:4,
}
---
